# FileSystem-server

./: .gitignore  CMakeLists.txt  README.md  compile.sh  install_libhttpserver.sh  run.sh  setupCMake.sh
Client/: CMakeLists.txt
Client/inc/: ReadInput.h
Client/scripts/: compile.sh  run.sh  setupCMake.sh
Client/src/: ReadInput.cpp  main.cpp
Server/: CMakeLists.txt  Dockerfile
Server/inc/: Commands.h  CurlMethods.h  FileSystem.h
Server/scripts/: compile.sh  dockerBuild.sh  dockerRun.sh  installHttpServer.sh  run.sh  setupDocker.sh
Server/src/: Commands.cpp  CurlMethods.cpp  FileSystem.cpp  Memento.cpp  main.cpp
inc/: Commands.h  FileSystem.h  Folder.h  Memento.h  StructFile&Directory.h
scripts/: README.txt  compile.sh  deleteBuildDir.sh  run.sh  setupCMake.sh
src/: Commands.cpp  FileSystem.cpp  Folder.cpp  Memento.cpp  main.cpp
